// Copyright 2016-2023, Pulumi Corporation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "pulumi/codegen/hcl.proto";
import "pulumi/plugin.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

package pulumirpc;

option go_package = "github.com/pulumi/pulumi/sdk/v3/proto/go;pulumirpc";

// Boilerplate is a service for creating Pulumi packages - providers.
service Boilerplate {
    // CreatePackage creates a new Pulumi package - provider.
    rpc CreatePackage(CreatePackageRequest) returns (CreatePackageResponse) {}
}

message CreatePackageRequest {
    // the name of the package to create
    string name = 1;
    // the config file to use, if any
    bytes config = 2;
}

message CreatePackageResponse {
    // Diagnostics (output from plugin) are rendered via RunPlugin, so this is empty.
}
